# stupid_encoder

./: Cargo.toml  README.md  build.sh  compress.sh
src/: main.rs
