[package]
name = "stupid_encoder"
version = "0.1.0"
edition = "2021"
authors = ["Neowutran <me@neowutran.ovh>"]

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'abort'
incremental = false
codegen-units = 1
rpath = false

[dependencies]
clap = "3.0.0-beta.5"
